--- a/Areas/Admin/Views/UserManagement/MyProfile.cshtml
+++ b/Areas/Admin/Views/UserManagement/MyProfile.cshtml
@@ -6,8 +6,8 @@
 {
 <div class="main-content">
 
-    <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url(https://www.makemyassignments.com/blog/wp-content/uploads/2019/08/business-communication-tools-1024x574.png); background-size: cover; background-position: center top;">
-        <span class="mask bg-gradient-default opacity-8"></span>
+    <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url('/Public/Image/city.jpg'); background-size: cover; background-position: center top;">
+        <span class="mask" style="opacity:0.6;background-color:black"></span>
         <div class="container-fluid d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-7 col-md-10">
