--- a/Areas/Admin/Views/ServiceManagement/ServiceIndex2.cshtml
+++ b/Areas/Admin/Views/ServiceManagement/ServiceIndex2.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-<div class="container" style="margin-top: 30px;padding-bottom: 40px">
+<div class="container" style="margin-top: 30px;padding-bottom: 80px">
 
     <div class="row">
         <div class="col-xl-12">
@@ -42,34 +42,14 @@
                                     <!-- and role or location -->
                                     <h2 style="color:white!important">We have @item.OrderDetails.Count OrderDetail</h2>
                                 </header>
+
                                 <!-- bit of a bio; who are you? -->
                                 <div class="profile-bio">
                                     <p class="description">
                                         Click me to view my Order Detail
                                     </p>
                                 </div>
-                                <!-- some social links to show off -->
-                                <ul class="profile-social-links">
-                                    <!-- twitter - el clásico  -->
-                                    <li>
-                                        <a target="_blank" href="#">
-                                            <i class="fa fa-twitter"></i>
-                                        </a>
-                                    </li>
-                                    <!-- envato – use this one to link to your marketplace profile -->
-                                    <li>
-                                        <a target="_blank" href="#">
-                                            <i class="fa fa-dribbble"></i>
-                                        </a>
-                                    </li>
-                                    <!-- codepen - your codepen profile-->
-                                    <li>
-                                        <a target="_blank" href="#">
-                                            <i class="fa fa-codepen"></i>
-                                        </a>
-                                    </li>
-                                    <!-- add or remove social profiles as you see fit -->
-                                </ul>
+                                
                             </aside>
                         </div>
                     }
@@ -84,7 +64,8 @@
                                 background-color: #172b4d;
                             }
                         </style>
-                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 80px;">
+                        <p style="margin-top: 80px;background-color:#172b4d;color:white" id="@item.Id" class="alert">@item.Service_Name</p>
+                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 30px;">
                             <div class="table-responsive">
                                 <table id="table_Service_@item.Id" class="cell-border text-center align-items-center table-dark table-flush ">
                                     <thead class="thead-dark">
@@ -95,7 +76,7 @@
                                             <th style="font-size: 0.875rem">Status</th>
                                             <th style="font-size: 0.875rem">Number of Staff</th>
 
-                                            <th style="font-size: 0.875rem">Assign</th>
+                                            <th style="font-size: 0.875rem"></th>
                                         </tr>
                                     </thead>
                                     <tbody class="list" style="color: white">
@@ -111,7 +92,8 @@
                                 background-color: darkseagreen;
                             }
                         </style>
-                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 80px;">
+                        <p style="margin-top: 80px;background-color:darkseagreen;color:white" id="@item.Id" class="alert">@item.Service_Name</p>
+                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 30px;">
                             <div class="table-responsive">
                                 <table id="table_Service_@item.Id" class="cell-border text-center align-items-center table-flush ">
                                     <thead>
@@ -122,7 +104,7 @@
                                             <th style="font-size: 0.875rem">Status</th>
                                             <th style="font-size: 0.875rem">Number of Staff</th>
 
-                                            <th style="font-size: 0.875rem">Assign</th>
+                                            <th style="font-size: 0.875rem"></th>
                                         </tr>
                                     </thead>
                                     <tbody class="list" style="color: white">
@@ -139,7 +121,8 @@
                                 background-color: lemonchiffon;
                             }
                         </style>
-                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 80px;">
+                        <p style="margin-top: 80px;background-color: lemonchiffon;color:black" id="@item.Id" class="alert">@item.Service_Name</p>
+                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 30px;">
                             <div class="table-responsive">
                                 <table id="table_Service_@item.Id" class="cell-border text-center align-items-center table-flush ">
                                     <thead>
@@ -149,8 +132,7 @@
                                             <th style="font-size: 0.875rem">Date End</th>
                                             <th style="font-size: 0.875rem">Status</th>
                                             <th style="font-size: 0.875rem">Number of Staff</th>
-
-                                            <th style="font-size: 0.875rem">Assign</th>
+                                            <th style="font-size: 0.875rem"></th>
                                         </tr>
                                     </thead>
                                     <tbody class="list" style="color: white">
@@ -166,7 +148,8 @@
                                 background-color: lemonchiffon;
                             }
                         </style>
-                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 80px;">
+                        <p style="margin-top: 80px;background-color:lemonchiffon;color:black" id="@item.Id" class="alert">@item.Service_Name</p>
+                        <div class="row table_row" id="table_row_@item.Id" style="margin-top: 30px;">
                             <div class="table-responsive">
                                 <table id="table_Service_@item.Id" class="cell-border text-center align-items-center table-flush ">
                                     <thead>
@@ -176,8 +159,7 @@
                                             <th style="font-size: 0.875rem">Date End</th>
                                             <th style="font-size: 0.875rem">Status</th>
                                             <th style="font-size: 0.875rem">Number of Staff</th>
-
-                                            <th style="font-size: 0.875rem">Assign</th>
+                                            <th style="font-size: 0.875rem"></th>
                                         </tr>
                                     </thead>
                                     <tbody class="list" style="color: white">
@@ -190,16 +172,21 @@
                 }
             }
         </div>
+
     </div>
 
 </div>
+
+<button onclick="topFunction()" style="position: sticky;bottom: 20px;z-index: 99;font-size: 18px;background-color:transparent;border: none;outline: none;border-radius: 4px;" id="btn_top" title="Go to top">
+    <img src="~/Public/Image/up-arrow (1).png" width="40" height="40" />
+</button>
+
 
 @section css{
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
     <link href="~/Areas/Admin/Public/DataTable/pagination.css" rel="stylesheet" />
     <link href="~/Areas/Admin/Public/css/loader.css" rel="stylesheet" />
-    <link href="~/Areas/Admin/Public/JdLomX/css/style.css" rel="stylesheet" />
-
+    <link href="~/Areas/Admin/Public/JdLomX/css/avzv.css" rel="stylesheet" />
 }
 @section js{
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
@@ -213,7 +200,6 @@
                     type: "GET",
                     dataType: "json",
                     success: function (result) {
-                        var Id = result.Id;
                         $('#table_Service_' + @item.Id).DataTable({
                             "lengthMenu": [10, 15, 20, 30],
                             "pagingType": "full_numbers",
@@ -248,23 +234,28 @@
                                     'render': function (OrderDetail_Status) {
                                         if (OrderDetail_Status == 0) {
                                             return '<span class="badge badge-dot mr-4"><i class="bg-warning"></i><span class="status">Pending</span></span>';
+                                        } else if (OrderDetail_Status == 1) {
+                                            return '<span class="badge badge-dot mr-4"><i class="bg-info"></i><span class="status">Started</span></span>';
+                                        } else if (OrderDetail_Status == 2) {
+                                            return '<span class="badge badge-dot mr-4"><i class="bg-gradient-orange"></i><span class="status">Completed</span></span>';
                                         } else {
-                                            return '<span class="badge badge-dot mr-4"><i class="bg-info"></i><span class="status">Working</span></span>';
+                                            return '<span class="badge badge-dot mr-4"><i class="bg-yellow"></i><span class="status">Deleted</span></span>';
                                         }
-
                                     }
                                 },
                                 { 'data': 'OrderDetail_NumberOfPeople' },
                                 {
                                     'data' : 'Id',
                                     'render': function (Id) {
-                                        return '<a class="btn" href="/Admin/ServiceManagement/Assign_Staff/' + Id +'"style="background-color: #e6eef1;font-size: 12px"> Assign </a>';
+                                        return '<a class="btn btn-info" style="font-size: 10px" onclick= "return _Reset(' + Id + ')"> Reset </a>' +
+                                            '<a class="btn btn-success" style="font-size: 10px" onclick= "return _Activate(' + Id + ')"> Activate </a>' +
+                                            '<a class="btn btn-primary" style="font-size: 10px" onclick= "return _Complete(' + Id + ')"> Complete </a>' +
+                                            '<a class="btn" href="/Admin/ServiceManagement/Assign_Staff/' + Id + '"style="background-color: #e6eef1;font-size: 10px"> Assign </a>';
                                     }
-                                },
+                                }
                             ]
 
                         });
-                        $('.table_row').hide();
                     },
                     error: function (erro) {
                     }
@@ -274,12 +265,70 @@
     }
 
     <script type="text/javascript">
+        window.onscroll = function () { scrollFunction() };
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("btn_top").style.display = "block";
+            } else {
+                document.getElementById("btn_top").style.display = "none";
+            }
+
+        }
+        function topFunction() {
+            $('html, body').animate({ scrollTop: 0 }, 'slow');
+        }
         function _GetOrderDetail(Service_ID) {
             $('.table_row').each(function () {
                 $(this).hide();
             });
+            $('.alert').each(function () {
+                $(this).hide();
+            });
+            $('#' + Service_ID).show();
             $('#table_row_' + Service_ID).show();
         };
+        function _Activate(Id) {
+            $.ajax({
+                url: "/Admin/ServiceManagement/Activate?ord_id=" + Id,
+                contentType: "application/json;charset=utf-8",
+                type: "GET",
+                dataType: "json",
+                success: function (data) {
+                    alert("Activate Succesfull. Please reload to update status");
+                },
+                error: function () {
+                    alert("Unsuccessfully !");
+                }
+            });
+        }
+        function _Complete(Id) {
+            $.ajax({
+                url: "/Admin/ServiceManagement/Complete?ord_id=" + Id,
+                contentType: "application/json;charset=utf-8",
+                type: "GET",
+                dataType: "json",
+                success: function (data) {
+                    alert("Complete Succesfull. Please reload to update status");
+                },
+                error: function () {
+                    alert("Unsuccessfully !");
+                }
+            });
+        }
+        function _Reset(Id) {
+            $.ajax({
+                url: "/Admin/ServiceManagement/Reset?ord_id=" + Id,
+                contentType: "application/json;charset=utf-8",
+                type: "GET",
+                dataType: "json",
+                success: function (data) {
+                    alert("Reset Succesfull. Please reload to update status");
+                },
+                error: function () {
+                    alert("Unsuccessfully !");
+                }
+            });
+        }
     </script>
 
 }
